[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "rifs", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
black = "^24.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
tox = "^4.14.2"
coverage = "^7.4.4"


[tool.poetry.group.shell.dependencies]
ipython = "^8.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
